--- a/YavaPrimumFront/src/app/pages/user-data/user-data.component.scss
+++ b/YavaPrimumFront/src/app/pages/user-data/user-data.component.scss
@@ -12,6 +12,8 @@
 
     .photo
     {
+        width: 70px;
+        height: 70px;
         border-radius: 100%;
         border: 1px solid lightgray;
         margin-right: 5px;
