--- a/YavaPrimumFront/src/app/components/header/header.component.html
+++ b/YavaPrimumFront/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
     <h3 (click)="navigateTo('account/hr')">YavaPrimum</h3>
 
     <span class="d-inline-flex toUserData">
