--- a/YavaPrimumFront/src/app/components/common-ui/tasks-components/change-task/change-task.component.html
+++ b/YavaPrimumFront/src/app/components/common-ui/tasks-components/change-task/change-task.component.html
@@ -2,7 +2,7 @@
     <div
       class="modal fade"
       data-bs-backdrop="static"
-      id="AddCandidate"
+      id="ChangeCandidate"
       tabindex="-1"
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
