--- a/YavaPrimumFront/src/app/components/common-ui/tasks-components/task/task.component.html
+++ b/YavaPrimumFront/src/app/components/common-ui/tasks-components/task/task.component.html
@@ -1,10 +1,10 @@
-<div class="card task-card bg-white mb-4" *ngIf="task" [ngClass]="{'passed': task.status == 'Выполнено'}">
+<div class="card task-card bg-white mb-4" *ngIf="task" [ngClass]="{'passed': task.typeStatus == 2}">
     <div>
       <span class="d-flex justify-content-between">
         <p class="fs-4">{{task.dateTime.toFormat('HH:mm')}}</p>
       <p class="text-success">{{task.status}}</p>
       </span>
-    <p>{{task.post}}</p>
+    <p>{{task.candidatePost}}</p>
     <p class="candidate_FIO">{{task.candidate.surname}} {{task.candidate.firstName}} {{task.candidate.patronymic}}</p>
     <span class="d-flex column-gap-3 flex-wrap">
         <span class="d-inline-flex">
@@ -18,7 +18,10 @@
     </span>
       <span class="d-flex justify-content-end gap-1 mt-2">
         <button type="button" class="bi bi-clipboard2 btn btn-outline-success"  data-bs-toggle="modal" 
-        data-bs-target="#Interview" (click)="onButtonClick()"*ngIf="task.status != 'Выполнено'">Собеседовать</button>
+        data-bs-target="#Interview" (click)="onButtonClick()"*ngIf="task.status == 'Назначено собеседование'">Собеседовать</button>
+
+        <button type="button" class="bi bi-clipboard2 btn btn-outline-success"  data-bs-toggle="modal" 
+        data-bs-target="#Reception" (click)="onButtonClick()"*ngIf="task.status == 'Назначен приём'">Принять</button>
   
         <button type="button" class="bi bi-pen btn btn-outline-secondary"data-bs-toggle="modal" 
         data-bs-target="#ChangeCandidate" (click)="onButtonClick()">Изменить</button>
