--- a/YavaPrimumFront/src/app/components/notifications-page/notifications/notifications.component.html
+++ b/YavaPrimumFront/src/app/components/notifications-page/notifications/notifications.component.html
@@ -1,25 +1,34 @@
 <div class="container">
-  <h4 class="mb-4 text-center">Уведомления</h4>
-  <div *ngIf="notifications.length === 0" class="alert alert-info text-center">
-      У вас нет новых уведомлений.
-  </div>
-  <div *ngFor="let notification of notifications" class="card mb-3 shadow-sm" [ngClass]="{'readed': notification.isReaded}" loading="lazy">
-    <div class="card-body">
-        <div class="d-flex">
-            <img src="https://localhost:7247/{{notification.task.user.imgUrl}}" alt="User Image" class="rounded-circle me-3" style="width: 50px; height: 50px;">
-            <div class="w-100">    
-                <div class="d-flex justify-content-between">
-                    <h5 class="card-title text-primary">{{ notification.task.user.surname }} {{ notification.task.user.firstName }} {{ notification.task.user.patronymic }}</h5>
-                    <small class="text-muted">{{ toFormat(notification.dateTime.toString()) }}</small>
-                </div>
-                <p class="card-text">{{ notification.textMessage }}</p>
-                <div class="d-flex justify-content-end">
-                <button *ngIf="!notification.isReaded" (click)="markAsRead(notification)" class="btn btn-outline-success btn-sm">
-                        {{ notification.status === 'Собеседование пройдено' ? 'Взять кандидата' : 'Прочитано' }}
-                </button>
-                </div>
-            </div>
-        </div>
+    <h4 class="mb-4 text-center">Уведомления</h4>
+    <div class="d-flex justify-content-end mb-3 position-relative">
+      <div class="form-check position-absolute">
+        <input class="form-check-input" type="checkbox" id="unreadOnly" [(ngModel)]="showUnreadOnly" (change)="filterNotifications()">
+        <label class="form-check-label" for="unreadOnly">
+          Только непрочитанные
+        </label>
+      </div>
     </div>
-</div>
-</div>
+    <div *ngIf="filteredNotifications.length === 0" class="alert alert-info text-center">
+      У вас нет новых уведомлений.
+    </div>
+    <div *ngFor="let notification of filteredNotifications" class="card mb-3 shadow-sm" [ngClass]="{'readed': notification.isReaded}" loading="lazy">
+      <div class="card-body">
+        <div class="d-flex">
+          <img src="https://localhost:7247/{{notification.task.user.imgUrl}}" alt="User Image" class="rounded-circle me-3" style="width: 50px; height: 50px;">
+          <div class="w-100">
+            <div class="d-flex justify-content-between">
+              <h5 class="card-title text-primary">{{ notification.task.user.surname }} {{ notification.task.user.firstName }} {{ notification.task.user.patronymic }}</h5>
+              <small class="text-muted">{{ toFormat(notification.dateTime.toString()) }}</small>
+            </div>
+            <p class="card-text">{{ notification.textMessage }}</p>
+            <div class="d-flex justify-content-end">
+              <button *ngIf="!notification.isReaded" (click)="markAsRead(notification)" class="btn btn-outline-success btn-sm">
+                {{ notification.status === 'Собеседование пройдено' ? 'Взять кандидата' : 'Прочитано' }}
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
