--- a/YavaPrimumFront/src/app/components/user-data/user-data.component.html
+++ b/YavaPrimumFront/src/app/components/user-data/user-data.component.html
@@ -1,38 +1,45 @@
-<div class="d-flex">
-    <div class="container profile mx-5 mt-5">
-        <form>
-            <span class="d-flex align-items-center">
-                <img class="photo" src="https://localhost:7247/{{formData.imgUrl}}" [alt]="formData.surname">
-                <span class="d-flex flex-column">
-                <p class="name">{{formData.surname}} {{formData.firstName}} {{formData.patronymic}}</p>
-                <p class="post">{{formData.post}}</p>
-              </span>
-            </span>
-            <span class="d-flex column-gap-3 flex-wrap">
-                <span class="d-inline-flex">
-                  <i class="bi bi-telephone"></i>
-                  <p>{{formData.phone}}</p>
-                </span>
-                <span class="d-inline-flex">
-                  <i class="bi bi-envelope"></i>
-                  <p>{{formData.email}}</p>
-                </span>
-            </span>
-    
-            <!-- <label for="country">Страна:</label>
-            <input id="country" class="form-control" [value]="formData.country" readonly> -->
-    
-            <label for="company">Компания:</label>
-            <input id="company" class="form-control" [value]="formData.company" readonly>
-    
-        </form>
-    
-        <button class="btn btn-primary" (click)="logOut()">Выйти</button>
-    </div>
-    <div class="container mt-5">
-        <canvas id="tasksChart" width="800" height="500"></canvas>
+<div class="d-flex justify-content-center align-items-center p-4">
+  <div class="container profile shadow-sm p-4 bg-white rounded mb-5">
+      <form>
+          <div class="d-flex align-items-center mb-4">
+              <img class="photo img-thumbnail" src="https://localhost:7247/{{formData.imgUrl}}" [alt]="formData.surname">
+              <div class="d-flex flex-column ms-3">
+                  <p class="name h4 mb-0">{{formData.surname}} {{formData.firstName}} {{formData.patronymic}}</p>
+                  <p class="post text-muted">{{formData.post}}</p>
+              </div>
+          </div>
+          <div class="d-flex flex-wrap gap-3 mb-4">
+              <div class="d-inline-flex align-items-center">
+                  <i class="bi bi-telephone me-2"></i>
+                  <p class="mb-0">{{formData.phone}}</p>
+              </div>
+              <div class="d-inline-flex align-items-center">
+                  <i class="bi bi-envelope me-2"></i>
+                  <p class="mb-0">{{formData.email}}</p>
+              </div>
+          </div>
+
+          <div class="mb-3">
+              <label for="company" class="form-label">Компания:</label>
+              <input id="company" class="form-control" [value]="formData.company" readonly>
+          </div>
+
+          <button class="btn btn-primary w-100 jusify-self-end" (click)="logOut()">Выйти</button>
+      </form>
+  </div>
+
+  <div class="container flex-grow-1" *ngIf="!isAdmin">
+      <div class="d-flex gap-1 justify-content-center align-items-center mb-4">
+          <button class="btn btn-outline-secondary" (click)="changeMonth(-1)"><i class="bi bi-caret-left"></i></button>
+          <p class="h5 mb-0 mx-3">{{activeMonthToString}}</p>
+          <button class="btn btn-outline-secondary" (click)="changeMonth(1)"><i class="bi bi-caret-right"></i></button>
       </div>
-      
-    </div>
-    
-    
+      <canvas baseChart
+          [type]="'line'"
+          [data]="taskChartData"
+          [options]="taskChartOptions"
+          width="45px"
+          height="25px">
+      </canvas>
+  </div>
+</div>
