--- a/YavaPrimumFront/src/app/components/user-data/user-data.component.scss
+++ b/YavaPrimumFront/src/app/components/user-data/user-data.component.scss
@@ -1,26 +1,43 @@
-.profile
-{
+.profile {
     max-width: 500px;
+    width: 50%;
+    height: 200%;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
-    
-    label
-    {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+    label {
         margin-top: 5px;
+        font-weight: 500;
     }
 
-    .photo
-    {
+    .photo {
         width: 70px;
         height: 70px;
         border-radius: 100%;
-        border: 1px solid lightgray;
-        margin-right: 5px;
+        border: 2px solid #e9ecef;
+        margin-right: 15px;
     }
 
-    .name
-    {
-        font-size: large
+    .name {
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+
+    .post {
+        font-size: 1rem;
+        color: #6c757d;
+    }
+
+    .btn-primary {
+        background-color: #0d6efd;
+        border-color: #0d6efd;
+        font-weight: 500;
+    }
+
+    .btn-primary:hover {
+        background-color: #0b5ed7;
+        border-color: #0a58ca;
     }
 }
