Before delete archive

--- a/YavaPrimumFront/src/app/components/HR-page/hr/hr.component.html
+++ b/YavaPrimumFront/src/app/components/HR-page/hr/hr.component.html
@@ -21,7 +21,7 @@
   </div>
 <app-task-interview [task]="activeTask"></app-task-interview>
 <app-add-task></app-add-task>
-<app-change-task></app-change-task>
-  <!--    <app-change-candidate></app-change-candidate>
+<!--<app-change-task></app-change-task>
+<app-change-candidate></app-change-candidate>
 <app-task-delete></app-task-delete>s-->
   
