--- a/YavaPrimumFront/src/app/components/common-ui/tasks-components/change-task/change-task.component.html
+++ b/YavaPrimumFront/src/app/components/common-ui/tasks-components/change-task/change-task.component.html
@@ -103,7 +103,7 @@
                 Закрыть
               </button>
               <button type="submit" class="btn btn-primary">
-                Добавить кандидата
+                Изменить кандидата
               </button>
             </div>
           </form>
