--- a/YavaPrimumFront/src/app/components/common-ui/tasks-components/task/task.component.html
+++ b/YavaPrimumFront/src/app/components/common-ui/tasks-components/task/task.component.html
@@ -23,8 +23,8 @@
         <button type="button" class="bi bi-clipboard2 btn btn-outline-success"  data-bs-toggle="modal" 
         data-bs-target="#Reception" (click)="onButtonClick()"*ngIf="task.status == 'Назначен приём'">Принять</button>
   
-        <button type="button" class="bi bi-pen btn btn-outline-secondary"data-bs-toggle="modal" 
-        data-bs-target="#ChangeCandidate" (click)="onButtonClick()">Изменить</button>
+        <!-- <button type="button" class="bi bi-pen btn btn-outline-secondary"data-bs-toggle="modal"  -->
+        <!-- data-bs-target="#ChangeCandidate" (click)="onButtonClick()">Изменить</button> -->
     </span>
   </div>
   
