--- a/YavaPrimumFront/src/app/components/admin-page/admin/admin.component.html
+++ b/YavaPrimumFront/src/app/components/admin-page/admin/admin.component.html
@@ -7,42 +7,45 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="userModalLabel">{{ isEditMode ? 'Редактировать пользователя' : 'Добавить пользователя' }}</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" (click)="closeModal()" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form (ngSubmit)="onSubmit()">
+        <form (ngSubmit)="onSubmit(form)" #form="ngForm">
           <div class="mb-2">
             <label for="surname" class="form-label">Фамилия</label>
-            <input type="text" class="form-control" id="surname" [(ngModel)]="currentUser.surname" name="surname" placeholder="Иванов" required>
+            <input type="text" class="form-control" id="surname" [(ngModel)]="currentUser!.surname" name="surname" placeholder="Иванов" required>
           </div>
           <div class="mb-2">
             <label for="firstName" class="form-label">Имя</label>
-            <input type="text" class="form-control" id="firstName" [(ngModel)]="currentUser.firstName" name="firstName" placeholder="Иван" required>
+            <input type="text" class="form-control" id="firstName" [(ngModel)]="currentUser!.firstName" name="firstName" placeholder="Иван" required>
           </div>
           <div class="mb-2">
             <label for="patronymic" class="form-label">Отчество</label>
-            <input type="text" class="form-control" id="patronymic" [(ngModel)]="currentUser.patronymic" name="patronymic" placeholder="Иванович">
+            <input type="text" class="form-control" id="patronymic" [(ngModel)]="currentUser!.patronymic" name="patronymic" placeholder="Иванович">
           </div>
-          <div class="mb-2">
-            <label for="company" class="form-label">Компания</label>
-            <select class="form-select" id="company" [(ngModel)]="currentUser.company" name="company" required>
-              <option *ngFor="let company of companies" [value]="company">{{ company }}</option>
-            </select>
+          <div class="mb-2 d-flex justify-content-between">
+            <div class="col-md-5">
+              <label for="company" class="form-label">Компания</label>
+              <select class="form-select" id="company" [(ngModel)]="currentUser!.company" name="company" required>
+                <option *ngFor="let company of companies" [value]="company">{{ company }}</option>
+              </select>
+            </div>
+            <div class="col-md-5">
+              <label for="post" class="form-label">Должность</label>
+              <select class="form-select" id="post" [(ngModel)]="currentUser!.post" name="post" required>
+                <option value="HR">HR</option>
+                <option value="Кадровик">Кадровик</option>
+              </select>
+            </div>
           </div>
+
           <div class="mb-2">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" [(ngModel)]="currentUser.email" name="email" required placeholder="email@gmail.com">
-          </div>
-          <div class="mb-2">
-            <label for="post" class="form-label">Должность</label>
-            <select class="form-select" id="post" [(ngModel)]="currentUser.post" name="post" required>
-              <option value="HR">HR</option>
-              <option value="Кадровик">Кадровик</option>
-            </select>
+            <input type="email" class="form-control" id="email" [(ngModel)]="currentUser!.email" name="email" required placeholder="email@gmail.com">
           </div>
           <div class="mb-2">
             <label for="phone" class="form-label">Телефон</label>
-            <input type="text" class="form-control" id="phone" [(ngModel)]="currentUser.phone" name="phone" placeholder="+375 ## ###-##-##">
+            <input type="text" class="form-control" id="phone" [(ngModel)]="currentUser!.phone" name="phone" placeholder="+375 ## ###-##-##">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
@@ -55,128 +58,111 @@
 </div>
 </ng-container>
 
-<span>
-  <button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#userModal" (click)="openModal()">
+
+
+<div class="d-flex justify-content-between align-items-center sticky-top buttons-panel">
+  <!-- Кнопка для добавления пользователя -->
+  <button 
+    type="button" 
+    class="btn btn-primary" 
+    data-bs-toggle="modal" 
+    data-bs-target="#userModal" 
+    (click)="openModal()">
     Добавить пользователя
   </button>
-</span>
-<div class="contain">
-  <div>
-      <table class="table table-striped">
-        <thead>
+
+  <!-- Кнопка переключения видимости -->
+  <button 
+    class="btn btn-secondary" 
+    (click)="toggleChartDisplay()">
+    <i *ngIf="isChartVisible" class="bi bi-chevron-compact-right"></i>
+    <i *ngIf="!isChartVisible" class="bi bi-chevron-compact-left"></i>
+  </button>
+</div>
+
+<div class="layout-horizontal mt-1">
+  <!-- Таблица слева -->
+  <div class="table-container">
+    <table class="user-table table-striped">
+      <table class="user-table table-striped">
+        <thead class="table-light">
           <tr>
-            <!-- Заголовки столбцов -->
-            <th></th>
-            <th>Фамилия</th>
-            <th>Имя</th>
-            <th>Отчество</th>
-            <th>Компания</th>
-            <th>Email</th>
-            <th>Должность</th>
-            <th>Телефон</th>
-            <th></th>
+            <th>Фото</th>
+            <th *ngFor="let header of ['Фамилия', 'Имя', 'Отчество', 'Компания', 'Email', 'Должность', 'Телефон']">
+              {{ header }}
+            </th>
+            <th>Действия</th>
           </tr>
-          <!-- Строка фильтрации -->
-          <tr>
+          
+          <!-- Filters -->
+          <tr class="filter-row">
             <th></th>
-            <th>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Фамилия"
-                [(ngModel)]="filters.surname"
-                (input)="applyFilters()"
-              />
-            </th>
-            <th>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Имя"
-                [(ngModel)]="filters.firstName"
-                (input)="applyFilters()"
-              />
-            </th>
-            <th>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Отчество"
-                [(ngModel)]="filters.patronymic"
-                (input)="applyFilters()"
-              />
-            </th>
-            <th>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Компания"
-                [(ngModel)]="filters.company"
-                (input)="applyFilters()"
-              />
-            </th>
-            <th>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Email"
-                [(ngModel)]="filters.email"
-                (input)="applyFilters()"
-              />
-            </th>
-            <th>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Должность"
-                [(ngModel)]="filters.post"
-                (input)="applyFilters()"
-              />
-            </th>
-            <th>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Телефон"
-                [(ngModel)]="filters.phone"
-                (input)="applyFilters()"
-              />
+            <th *ngFor="let filter of ['surname', 'firstName', 'patronymic', 'company', 'email', 'post', 'phone']">
+              <input type="text"
+                     class="form-control"
+                     [(ngModel)]="filters[filter]"
+                     (input)="applyFilters()"
+                     [placeholder]="getFilterPlaceholder(filter)">
             </th>
             <th></th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let user of filteredUsers" (click)="getAllTasksOfUser(user)">
-            <td><img id="photo" class="photo mx-1" src="https://localhost:7247/{{user.imgUrl}}" [alt]="user.surname"></td>
-            <td>{{ user.surname }}</td>
-            <td>{{ user.firstName }}</td>
-            <td>{{ user.patronymic }}</td>
-            <td>{{ user.company }}</td>
-            <td>{{ user.email }}</td>
-            <td>{{ user.post }}</td>
-            <td>{{ user.phone }}</td>
-            <td>
-              <span class="d-flex gap-1">
-              <button type="button" class="bi btn-mini bi-pen btn btn-outline-success"data-bs-toggle="modal" 
-              data-bs-target="#userModal" (click)="openEditModal(user)"></button>
-              <button type="button" class="bi btn-mini bi-trash btn btn-outline-danger" (click)="deleteUser(user)"></button>
-             </span> 
-            </td>
-          </tr>
-        </tbody>
+            <tr *ngFor="let user of filteredUsers" 
+                (click)="getAllTasksOfUser(user)"
+                [class.table-active]="currentUser?.userId === user.userId">
+              <td>
+                <img class="user-photo mx-1" 
+                     [src]="'https://localhost:7247/' + user.imgUrl" 
+                     [alt]="user.surname"
+                     onerror="this.src='assets/images/default-avatar.png'">
+              </td>
+              <td>{{ user.surname }}</td>
+              <td>{{ user.firstName }}</td>
+              <td>{{ user.patronymic }}</td>
+              <td>{{ user.company }}</td>
+              <td>
+                <a href="mailto:{{user.email}}" class="text-decoration-none">
+                  {{ user.email }}
+                </a>
+              </td>
+              <td>{{ user.post }}</td>
+              <td>{{ user.phone }}</td>
+              <td>
+                <div class="action-buttons d-flex gap-1">
+                  <button type="button" 
+                          class="btn btn-edit bi bi-pencil"
+                          data-bs-toggle="modal" 
+                          data-bs-target="#userModal" 
+                          (click)="openEditModal(user); $event.stopPropagation()">
+                  </button>
+                  <button type="button" 
+                          class="btn btn-delete bi bi-trash"
+                          (click)="deleteUser(user); $event.stopPropagation()">
+                  </button>
+                </div>
+              </td>
+            </tr>
+          </tbody>
       </table>
-    </div>
-    <span class="chart-container d-flex flex-column">
-    <!-- Диаграмма -->
-    <span class="d-flex gap-1 justify-content-center">
-        <div class="headline-control" (click)="changeMonth(-1)"><i class="bi bi-caret-left"></i></div>
-        <p style="width: 70px;">{{activeMonthToString}}</p>
-        <div class="headline-control" (click)="changeMonth(1)"><i class="bi bi-caret-right"></i></div>
-    </span>
-      <canvas baseChart
+    </table>
+  </div>
+
+  <!-- График справа -->
+  <div class="chart-container"  [style.display]="isChartVisible ? 'inherit' : 'none'">
+
+      <h3 class="text-center" >ва</h3>
+      <span class="d-flex gap-1 justify-content-center">
+        <button class="btn btn-outline-secondary" (click)="changeMonth(-1)"><i class="bi bi-caret-left"></i></button>
+        <p class="h5 mb-0 mx-3">{{activeMonthToString}}</p>
+        <button class="btn btn-outline-secondary" (click)="changeMonth(1)"><i class="bi bi-caret-right"></i></button>
+      </span>
+    <canvas baseChart
       [type]="'line'"
       [data]="taskChartData"
       [options]="taskChartOptions">
-  </canvas>   
-    </span>
+    </canvas>
+
+    
+  </div>
 </div>
