--- a/YavaPrimumFront/src/app/components/not-found/not-found.component.html
+++ b/YavaPrimumFront/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,15 @@
-<p>Страница не найдена</p>
+<div class="container d-flex flex-column justify-content-center align-items-center vh-100">
+    <div class="text-center">
+      <!-- Иконка ошибки -->
+      <i class="bi bi-exclamation-triangle-fill text-danger display-1 mb-4"></i>
+      
+      <!-- Заголовок -->
+      <h1 class="display-4 fw-bold">404</h1>
+      <p class="lead">Страница не найдена</p>
+      
+      <!-- Кнопка "Вернуться назад" с иконкой -->
+      <button class="btn btn-primary mt-3" (click)="goBack()">
+        <i class="bi bi-arrow-left me-2"></i> Вернуться назад
+      </button>
+    </div>
+  </div>
