--- a/YavaPrimumFront/src/app/components/common-ui/calendar/calendar.component.scss
+++ b/YavaPrimumFront/src/app/components/common-ui/calendar/calendar.component.scss
@@ -69,6 +69,11 @@ $task-call-compleate-bg: #4ca689;
         font-size: 10px;
     }
 
+    .task-overdate 
+    {
+        background-color: rgb(158, 90, 90);
+        color: white;
+    }
     .grid-cell:hover
     {
         background-color: $hover;
