--- a/YavaPrimumFront/src/app/components/user-data/user-data.component.scss
+++ b/YavaPrimumFront/src/app/components/user-data/user-data.component.scss
@@ -2,11 +2,16 @@
     max-width: 500px;
     width: 50%;
     height: 200%;
-    background-color: white;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
+    .profile-1 
+    {
+        background-color: white;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    
     label {
         margin-top: 5px;
         font-weight: 500;
